--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        'Roboto', 'Oxygen', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+    font-family: 'Inter-Medium', Helvetica;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
